<resources>
    <string name="app_name">CapstoneApp</string>
    <string name="action_settings">Settings</string>
    <string name="zara_louis">ZaraLouis</string>
    <string name="hello_world">Hello World!</string>
    <string name="treat_yoself">Treat Yoself!</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_in">SIGN UP</string>
    <string name="welcome">Welcome</string>
    <string name="to">to</string>
    <string name="enter_name">Enter</string>

</resources>
