<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/purple">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="65sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/to"
        android:textSize="65sp"
        android:layout_gravity="center_horizontal" />



    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/treat_yoself"
        android:textColor="@color/white"
        android:textSize="65sp"
        android:layout_gravity="center_horizontal"/>




    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"/>


    />



</LinearLayout>